downgrade java to java 11 to support jenkins jnlp