@@ -1,7 +1,6 @@
 package de.koudingspawn.vaultcrdhelmrenderer.parser.rotation;
 
 import de.koudingspawn.vaultcrdhelmrenderer.utils.FileUtils;
-import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.apps.Deployment;
 import io.fabric8.kubernetes.client.utils.Serialization;
 import org.junit.jupiter.api.Assertions;
@@ -14,7 +13,7 @@ class DeploymentRotationTest {
     @ParameterizedTest
     @ValueSource(strings = {"deployment-with-volume-mount.yaml", "deployment-with-env.yaml", "deployment-with-env-from.yaml", "deployment-with-init-env.yaml", "deployment-with-init-env-from.yaml"})
     void referencesSecretInVolumeMount(String resource) {
-        String s = FileUtils.fileAsString("/yamls/deploymentrotation/%s".formatted(resource));
+        String s = FileUtils.fileAsString(String.format("/yamls/deploymentrotation/%s", resource));
         Deployment deployment = Serialization.unmarshal(s, Deployment.class);
 
         Deployment annotatedResource = (Deployment) new DeploymentRotation().annotate(deployment, "application-properties", "annotation-value");
